# FAME

./: CMakeLists.txt  PostFrag.C  README.md  main.cc
examplesInput/: LANL_2015_pu242.in  LANL_2020_pu239.in  UM_2020_Cf252.in
expParameters/: cartesian.txt  intCalibrationCs.txt  intCalibrationFS3.txt  intCalibrationSTIL.txt
fragFiss/: CMakeLists.txt  bindingA.nb  cf252fpy.txt  cf252sawtooth.csv  cf252tke.txt  frag.in  main.C  phd.txt  tabTotE.txt
fragFiss/include/: InfoSystem.h  constants.h  fragFiss.h
fragFiss/src/: AngleAnalysis.C  ELossCorrection.C  GainMatching.C  PlotWaves.C  PostAngle.C  PostAttenuation.C  PostCalib.C  PostCalibPHD.C  PostFrag.C  fillFragTree.C  fragFiss.C
include/: BeamEvent.h  CoincidenceAnalysis.h  CoincidenceEvent.h  DetectorClass.h  DetectorSystemClass.h  DigitizerBranchClass.h  FissionExperimentClass.h  GeneralEvent.h  InfoSystem.h  ParticleEvent.h  ProcessingConstants.h  SystemAnalysis.h  TriggerClass.h  TriggerEvent.h  mappingFunctions.h
macros/: cartesianDet.cpp  cartesianDirs.txt  cartesianDist.txt  chamber.cpp  csIntegrals.cpp  fileExceptions.C  findDist.C  fissErg.cpp  fitSlice.cpp  fitSliceDet.cpp  macroDetector.cpp  naIntegrals.cpp  produceDetCoord.C  pseudoReadTree.C  puFit.cpp  readDetectors.cpp
readFiss/: CMakeLists.txt  ReadMe.txt  main.cc
readFiss/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
readFiss/include/: Constants.h  Parameters.h  myANN.h  readFiss.h
readFiss/src/: BeamAnalysis.C  CorrelatedAnalysis.C  CovEM.C  GenerateGeometry.C  GetInfo.C  InitializeFunctions.C  InitializeHistograms.C  Loop.C  MappingFunctions.C  Plot.C  PlotBeam.C  PlotFragment.C  PlotTrigger.C  ReadBeamInfo.C  SetOptions.C  Spectra.C  initializeCovHistograms.C  myANN.C  readFiss.C
sampleData/: FS3_openV5_dist_270.d
simFiss/: CMakeLists.txt  main.cc
simFiss/include/: Constants.h  DetectorClass.h  SFAME.h  infoSystem.h  readColl.h
simFiss/src/: DetectorClass.C  LoopColl.C  functions.C  getInfo.C  initializeCoincTree.C  initializeCollisionTree.C  initializeDetectors.C  initializeInputFiles.C  readCollisionTree.C  readFromCol.C  readFromSimFile.C  sfame.C
src/: CoincidenceAnalysis.C  DetectionAnalysis.C  DetectionImport.C  DetectorSystemClass.C  FissionAnalysis.C  FissionExperimentClass.C  InitializeDetectorHistograms.C  InitializePSDFunctions.C  MappingFunctions.C  ParamFIles.C  SystemAnalysis.C  temp.C
src/old/: TriggerAnalysis.C
tutorials/: CollisionFile.root  cellNumbers.csv  data.txt  dice.C  exampleData.C  exampleDatav2.C  fakePsdSlice.C  fakePsdSlice2.C  fakePsdSlice2D.C  fakePsdSlice2X.C  fakePsdSlice3.C  fakePsdSliceROOTSlides.pptx  fileToTree.C  formula1.C  lesson3.C  lesson4.C  misclassFile.root  newStructure.txt  outline_pu239.txt  plot.C  readCollisionFile.C  readCollisionFile.h  setPointPlot.C  test.C
waveFiss/: .clang-format  .gitignore  ANL_2022.cfg  Makefile  README.md  analysisParams.cfg  fitParams_default.cfg  rootlogon.C  wave.in  wave.sh
waveFiss/cint/: LinkDef.h
waveFiss/convert/: CMakeLists.txt  Makefile  main.C
waveFiss/convert/include/: ConvertCompass.h  InfoSystem.h
waveFiss/convert/src/: ConvertCompass.C
waveFiss/doc/: USAGE.md  report.tex  smm_instructions.md
waveFiss/hists/output_pyxhists/: fp12yield.txt  massyield.txt  yields_coarsebin_nua.txt  yields_nua.txt
waveFiss/include/: Headers.h  Structures.h  TMidasBanks.h  WaveformProcessing.h  definitions.h
waveFiss/legacy/: fefix.cxx
waveFiss/legacy/analyzer_old/: Makefile
waveFiss/legacy/fitplaying/: Waveform_0_0_1.txt  Waveform_0_0_2.txt  displaywf.C  fithist.C
waveFiss/legacy/hists/: eloss0.txt  eloss1.txt  xd0.txt  xd1.txt
waveFiss/legacy/kyle_work/: NpCarbonFilter.txt  NpNoFilter.txt  basicPlots.C  dataRecord.txt  fitCosTheta.C  runList.txt  runList_2.txt
waveFiss/legacy/lookup/: nu_a_lookup.txt  nu_a_lookup_diff.txt  nu_a_lookup_m.txt  nu_a_lookup_nb.txt  phd_lookup.txt
waveFiss/legacy/macros/: calculate_eloss0.C  calculate_eloss1.C  calculate_xd.C  calculate_xd0.C  calculate_xd1.C  coinc_0.txt  coinc_1.txt  coinc_10.txt  coinc_2.txt  coinc_3.txt  coinc_4.txt  coinc_5.txt  coinc_6.txt  coinc_7.txt  coinc_8.txt  coinc_9.txt  count_evt_per_read.C  draw_evt_wf.C  draw_tke_diag.C  dump_xdhists.C  event_assembly.py  filtered_coinc_0.txt  filtered_coinc_1.txt  filtered_coinc_2.txt  filtered_coinc_3.txt  loopOnTree.C  makeChain.C  make_coinc_plots.C  make_coinc_plots.py  meant.C  order_events.py  plottree.C  pydump_wf.py  singles_processing.C  singles_spectra.py  startana.C  startana_gammas.C  tempwf.txt  tempwf2.txt  test.C  (+1 more)
waveFiss/legacy/smosby_work/: Makefile  bandaid.py  unpack2root.cpp  (+3 more)
waveFiss/macros/: evtFilterPlots.C  pAvsPh.C  spFilterPlots.C
waveFiss/scripts/: analyze_new_data.sh  analyze_runs.sh  build_evets_crontab.py  calculate_angles_crontab.py  calculate_eloss_crontab.py  fileprocessing_crontab.py  fileunpacking_crontab.py  iter_crontab.py  process_singles_crontab.py  random.sh  random_runs.txt  wrap_evtbuild.sh  wrap_evtbuild_gammas.sh  wrap_iterate.sh  wrap_singles.sh
waveFiss/src/: WaveformProcessing.cxx  angle_calibrations.cxx  eloss_corrections.cxx  eventbuild.cxx  eventbuild_gammatest.cxx_old  iterate.cxx  singlesprocessing.cxx  unpacker.cxx
(+17 files in other folders)
